--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,10 +48,15 @@ android {
         applicationId "com.universiapolis.firebase"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        //minSdkVersion flutter.minSdkVersion
+        //targetSdkVersion flutter.targetSdkVersion
+        //versionCode flutterVersionCode.toInteger()
+        //versionName flutterVersionName
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
