--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #download file from firebase
   firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
+  #authentification firebase
   firebase_auth: ^4.2.5
   firebase_database: ^10.0.9
   cloud_firestore: ^4.3.1
+
+  #store file on device
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
